--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>easy sms - Login</title>
 
-        <link rel="stylesheet" type="text/css" href="style1.css"/>
+        <link rel="stylesheet" type="text/css" href="css/style1.css"/>
 
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
         <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet"/>
     </head>
     <body>
         <header>
-            <img id="logo" src="letter-icon.png"/>
+            <img id="logo" src="images/letter-icon.png"/>
             <h1>Easy Sms</h1>
             <i id="help" class="fa fa-info-circle fa-2x" aria-hidden="true"></i>
         </header>
