updated css and help icon

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
 
         <div class="btn-bottom">
-            <button class="btn"><a href="#">Sign in</a></button>
-            <button class="btn"><a href="#">Register</a></button>
+            <button class="btn">Sign in</button>
+            <button class="btn">Register</button>
         </div>
     </body>
 </html>
