--- a/index.html
+++ b/index.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
     <head>
-        <meta charset="UTF-8"/>
+        <meta charset="UTF-8"/> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>easy sms - Login</title>
-
-        <link rel="stylesheet" type="text/css" href="css/style1.css"/>
+        <title>easy sms</title>
 
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
         <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet"/>
     </head>
     <body>
         <header>
-            <img id="logo" src="images/letter-icon.png"/>
-            <h1>Easy Sms</h1>
-            <i id="help" class="fa fa-info-circle fa-2x" aria-hidden="true"></i>
+            
         </header>
 
-        <div class="credentials">
-            <h1>Enter your credentials</h1>
+        <main>
             <div>
-                <i class="fa fa-user" aria-hidden="true"></i>
-                <input id="username" class="input-box" type="text" name="society_name" value="" placeholder="Society Name" spellcheck="false" required>
-            </div>
-            <div >
-                <i class="fa fa-lock" aria-hidden="true"></i>
-                <input id="psd" class="input-box" type="password" name="password" value="" placeholder="Password" spellcheck="false" required>
-            </div>
-        </div>
+                <button>
 
-        <div class="btn-bottom">
-            <button class="btn">Sign in</button>
-            <button class="btn">Register</button>
-        </div>
+                </button>
+                <button>
+
+                </button>
+            </div>
+        </main>
     </body>
 </html>
