added index and login page

--- a/index.html
+++ b/index.html
@@ -5,23 +5,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>easy sms</title>
 
+        <link rel="stylesheet" type="text/css" href="css/style2.css"/>
+
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
         <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet"/>
     </head>
     <body>
         <header>
-            
+            <img id="logo" src="images/letter-icon.png"/>
+            <h1>Easy Sms</h1>
+            <i id="settings" class="fa fa-bars fa-2x" aria-hidden="true"></i>
         </header>
 
         <main>
-            <div>
-                <button>
-
-                </button>
-                <button>
-
-                </button>
-            </div>
+            <button>Send to Society</button>
+            <button>Import from File</button>
         </main>
     </body>
 </html>
