--- a/login.html
+++ b/login.html
@@ -7,6 +7,8 @@
 
         <link rel="stylesheet" type="text/css" href="css/style1.css"/>
 
+        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
         <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet"/>
     </head>
@@ -30,8 +32,17 @@
         </div>
 
         <div class="btn-bottom">
-            <button class="btn">Sign in</button>
-            <button class="btn">Register</button>
+            <button class="btn" id="sign-in">Sign in</button>
+            <button class="btn" id="register">Register</button>
+            <button class="btn" id="as-guest">Guest Login</button>
         </div>
+
+        <script>
+            $(document).ready(function() {
+                $('#sign-in').click(function() {
+                    window.open('index.html', '_self');
+                });
+            });
+        </script>
     </body>
 </html>
