email radio and send to society

--- a/index.html
+++ b/index.html
@@ -12,34 +12,66 @@
         <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet"/>
     </head>
     <body>
+        <section class="section-3" style="display:none">
+            <div id="pop-up-settings">
+                <div class="cross-div"><i id="cross" class="fa fa-times fa-2x" aria-hidden="true"></i></div>
+                <ul class="list">
+                    <li>Change password</li>
+                    <li>Help</li>
+                </ul>
+            </div>
+        </section>
+
         <header>
             <img id="logo" src="images/letter-icon.png"/>
             <h1>Easy Sms</h1>
-            <i id="settings" class="fa fa-bars fa-2x" aria-hidden="true"></i>
-            <i id="plus" class="fa fa-plus fa-2x"></i>
+            <i id="settings" class="fa fa-cog fa-2x" aria-hidden="true"></i>
+            <i title="Import message" id="plus" class="fa fa-plus fa-2x"></i>
         </header>
 
         <section class="section-1">
-            <button>Send to Society</button>
+            <button id="society-btn">Send to Society</button>
             <button id="import-btn">Import from File</button>
         </section>
 
         <section class="section-2" style="display:none">
-            <button class="import"><i id="btn-plus" class="fa fa-plus"></i>Import File</button>
+            <button class="top-button" id="import"><i id="btn-plus" class="fa fa-plus"></i>Import File</button>
+            <button class="top-button" id="portfolio">All (Select Portfolio)<i id="paper-plane" class="fa fa-paper-plane" aria-hidden="true"></i></button>
             <div class="options">
                 <label id="via">via:</label>
-                <div><input type="radio" name="format"><label class="option">SMS</label></div>
-                <div><input type="radio" name="format"><label class="option">Email</label></div>
+                <div><input type="radio" name="format" checked="checked" value="sms" id="sms-box"><label class="option">SMS</label></div>
+                <div><input type="radio" name="format" id="email-box" value="email"><label class="option">Email</label></div>
             </div>
-            <textarea rows="15" placeholder="Type your message here"></textarea>
-            <button class="import"><i id="btn-plus" class="fa fa-envelope-o"></i>Send</button>
+            <input class="subject" type="text" placeholder="Subject" required>
+            <textarea rows="15" placeholder="Type your message here" required></textarea>
+            <button class="top-button"><i id="btn-plus" class="fa fa-envelope-o"></i>Send</button>
         </section>
 
         <script>
             $(document).ready(function() {
                 $('#import-btn').click(function() {
+                    $('#plus').show();
                     $('.section-1').hide();
                     $('.section-2').show();
+                    $('#portfolio').hide();
+                });
+                $('#society-btn').click(function() {
+                    $('#plus').show();
+                    $('.section-1').hide();
+                    $('.section-2').show();
+                    $('#import').hide();
+                });
+                $('#email-box').click(function() {
+                    $('.subject').show();
+                });
+                $('#sms-box').click(function() {
+                    $('.subject').hide();
+                });
+                $('#settings').click(function() {
+                    $('.section-3').show();
+                });
+                $('#cross').click(function() {
+                    $('.section-3').hide();
                 });
             });
         </script>
