--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@
             </div>
         </section>
 
+        <section class="portfolios" style="display:none ; overflow: auto">
+            <div class="pop-up-portfolio" style="margin-bottom: 10px; margin-top:200px">
+                <div class="cross-div"><i style="margin-bottom: 5px" id="cross-1" class="fa fa-times fa-2x" aria-hidden="true"></i></div>
+                <label class="container">All<input type="checkbox" name="checked-portfolios" checked="checked"><span class="checkmark"></span></label>
+                <label class="container">Logistic<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                <label class="container">Web & IT<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                <label class="container">Publications<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                <label class="container">Graphics<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                <label class="container">Human Resources<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                <label class="container">Marketing<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                <label class="container">Admin Events<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                <label class="container">Media<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                <label class="container">External Relations<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                <label class="container">Social Media<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                <label class="container">Decor<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                <label class="container">Finance<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+            </div>
+        </section>
+
         <header>
             <img id="logo" src="images/letter-icon.png"/>
             <h1>Easy Sms</h1>
@@ -72,6 +91,12 @@
                 });
                 $('#cross').click(function() {
                     $('.section-3').hide();
+                });
+                $('#cross-1').click(function() {
+                    $('.portfolios').hide();
+                });
+                $('#portfolio').click(function() {
+                    $('.portfolios').show();
                 });
             });
         </script>
