scroll div portfoilo

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </div>
         </section>
 
-        <section class="portfolios" style="display:none ; overflow: auto">
-            <div class="pop-up-portfolio" style="margin-bottom: 10px; margin-top:200px">
+        <section class="portfolios" style="display:none">
+            <div class="pop-up-portfolio" style="overflow-y: scroll;height:50%">
                 <div class="cross-div"><i style="margin-bottom: 5px" id="cross-1" class="fa fa-times fa-2x" aria-hidden="true"></i></div>
                 <label class="container">All<input type="checkbox" name="checked-portfolios" checked="checked"><span class="checkmark"></span></label>
                 <label class="container">Logistic<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
