fixed crossed in portfolio

--- a/index.html
+++ b/index.html
@@ -23,21 +23,23 @@
         </section>
 
         <section class="portfolios" style="display:none">
-            <div class="pop-up-portfolio" style="overflow-y: scroll;height:50%">
-                <div class="cross-div"><i style="margin-bottom: 5px" id="cross-1" class="fa fa-times fa-2x" aria-hidden="true"></i></div>
-                <label class="container">All<input type="checkbox" name="checked-portfolios" checked="checked"><span class="checkmark"></span></label>
-                <label class="container">Logistic<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
-                <label class="container">Web & IT<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
-                <label class="container">Publications<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
-                <label class="container">Graphics<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
-                <label class="container">Human Resources<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
-                <label class="container">Marketing<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
-                <label class="container">Admin Events<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
-                <label class="container">Media<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
-                <label class="container">External Relations<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
-                <label class="container">Social Media<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
-                <label class="container">Decor<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
-                <label class="container">Finance<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+            <div class="pop-up-portfolio" style="height:50%">
+                <div class="cross-div"><i style="margin-bottom: 5px;" id="cross-1" class="fa fa-times fa-2x" aria-hidden="true"></i></div>
+                <div style="overflow-y: scroll;height: 85%">
+                    <label class="container">All<input type="checkbox" name="checked-portfolios" checked="checked"><span class="checkmark"></span></label>
+                    <label class="container">Logistic<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                    <label class="container">Web & IT<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                    <label class="container">Publications<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                    <label class="container">Graphics<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                    <label class="container">Human Resources<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                    <label class="container">Marketing<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                    <label class="container">Admin Events<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                    <label class="container">Media<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                    <label class="container">External Relations<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                    <label class="container">Social Media<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                    <label class="container">Decor<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                    <label class="container">Finance<input type="checkbox" name="checked-portfolios"><span class="checkmark"></span></label>
+                </div>
             </div>
         </section>
 
