responsive login page only

--- a/login.html
+++ b/login.html
@@ -21,11 +21,11 @@
         <div class="credentials">
             <h1>Enter your credentials</h1>
             <div>
-                <i class="fa fa-user" aria-hidden="true"></i>
+                <i class="fa fa-user fa-2x size-set" aria-hidden="true"></i>
                 <input id="username" class="input-box" type="text" name="society_name" value="" placeholder="Society Name" spellcheck="false" required>
             </div>
             <div>
-                <i class="fa fa-lock" aria-hidden="true"></i>
+                <i class="fa fa-lock fa-2x size-set" aria-hidden="true"></i>
                 <input id="psd" class="input-box" type="password" name="password" value="" placeholder="Password" spellcheck="false" required>
             </div>
         </div>
